<resources>
    <string name="app_name">Denhac Kiosk</string>
    <string name="denhac_kiosk_title">denhac kiosk</string>

    <string name="see_events_text">See Events</string>
    <string name="events_link_content_description">Events link</string>
    <string name="new_member_text">Become a Member</string>
    <string name="new_member_link_content_description">New Member link</string>
    <string name="sign_waiver_text">Sign Waiver</string>
    <string name="waiver_link_content_description">Waiver Link</string>
    <string name="help_text">Help</string>
    <string name="help_link_content_description">Howto denhac link</string>
    <string name="wifi_text">Wifi Information</string>
    <string name="wifi_content_description">Wifi Information</string>

    <string name="offline_text">Offline</string>
    <string name="attendees_text">Attendees</string>
    <string name="hosts_text">Hosts</string>
    <string name="attendee_image">Attendee Image</string>
    <string name="loading_text">Loading</string>
    <string name="clear_text">Clear</string>
    <string name="confirm_text">Confirm</string>
    <string name="cancel_text">Cancel</string>
    <string name="wifi_qr_code">Wifi QR Code</string>
    <string name="ssid_denhac">SSID: denhac</string>
    <string name="password_denhac_rules">Password: denhac rules</string>
    <string name="home_button">Home Button</string>
    <string name="today_button">Today Button</string>
</resources>
