<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/denhac_kiosk_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/denhac_kiosk_title"
        android:textAlignment="center"
        android:textSize="192sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/menu_options_first_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_options_first_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/menu_options_second_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/denhac_kiosk_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/events_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_menu_icon_border"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/new_member_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/events_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_events_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/events_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/events_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/events_link_content_description"
                android:minWidth="192dp"
                android:minHeight="192dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/events_link_text"
                app:srcCompat="@drawable/ic_event_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/new_member_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_menu_icon_border"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/waiver_group"
            app:layout_constraintStart_toEndOf="@id/events_group"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/new_member_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_member_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/new_member_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/new_member_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/events_link_content_description"
                android:minWidth="192dp"
                android:minHeight="192dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_member_link_text"
                app:srcCompat="@drawable/ic_person_add_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/waiver_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_menu_icon_border"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/new_member_group"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/waiver_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_waiver_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/waiver_link_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/waiver_link_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/new_member_link_content_description"
                android:minWidth="192dp"
                android:minHeight="192dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/waiver_link_text"
                app:srcCompat="@drawable/ic_create_black_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menu_options_second_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/menu_options_first_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/help_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_menu_icon_border"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/wifi_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/help_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/help_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/help_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/help_link_content_description"
                android:minWidth="192dp"
                android:minHeight="192dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/help_link_text"
                app:srcCompat="@drawable/ic_help_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/wifi_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/main_menu_icon_border"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/help_group"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/wifi_link_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi_text"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:padding="16dp"
                app:layout_constraintBottom_toTopOf="@+id/wifi_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/wifi_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/wifi_content_description"
                android:minWidth="192dp"
                android:minHeight="192dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wifi_link_text"
                app:srcCompat="@drawable/ic_wifi_black_24dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>